--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "static-site",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "8.2.4"
-  }
+    "name": "static-site",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "inquirer": "^8.2.4"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kamarygillespie4/NodeJs-ReadMe-Generator.git"
+    },
+    "keywords": [],
+    "bugs": {
+        "url": "https://github.com/kamarygillespie4/NodeJs-ReadMe-Generator/issues"
+    },
+    "homepage": "https://github.com/kamarygillespie4/NodeJs-ReadMe-Generator#readme"
 }
